--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,30 @@
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+}
+
 .App {
-  text-align: center;
+    text-align: center;
+    font-size: 30px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.App .form {
+    margin: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App .form .markdownText {
+    height: 300px;
+    resize: none;
 }
 
-.App-link {
-  color: #61dafb;
+.App .preview {
+    margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .preview .previewText {
+    height: 300px;
+    resize: none;
 }
