--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html {
 
 body {
     height: 100%;
+    background: #bbdefb;
 }
 
 .App {
@@ -16,7 +17,7 @@ body {
 }
 
 .App .form .markdownText {
-    height: 300px;
+    height: 200px;
     resize: none;
 }
 
@@ -24,7 +25,9 @@ body {
     margin: 20px;
 }
 
-.App .preview .previewText {
-    height: 300px;
-    resize: none;
+.App .preview .preview-box {
+    height: auto;
+    background: #cfd8dc;
+    border-radius: 5px;
+    overflow: auto;
 }
